# aikyo-package-manager

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml
src/: add.rs  main.rs  manager.rs  sync.rs  template.rs
