[package]
name = "apm"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/akazdayo/aikyo-package-manager.git"
homepage = "https://aikyo.vercel.app/"


[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.45", features = ["derive"] }
regex = "1.11.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
toml = "0.9.5"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
